wip: remove dead code